fix gap

--- a/src/assets/styles/Form.css
+++ b/src/assets/styles/Form.css
@@ -103,7 +103,7 @@ button:hover {
     position: relative;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 2rem;
+    gap: 1rem;
     margin: 3rem auto;
     background-color: var(--clr-white);
     border-radius: 2rem;
